--- a/.github/workflows/uccl-build-test.yml
+++ b/.github/workflows/uccl-build-test.yml
@@ -16,7 +16,9 @@ jobs:
   build-on-gpu-host:
     if: >
       github.event_name == 'push' ||
-      github.event_name == 'pull_request_target'
+      (github.event_name == 'pull_request' &&
+      !github.event.pull_request.head.repo.fork &&
+      github.event.pull_request.draft == false)
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -93,9 +95,8 @@ jobs:
           path: build.log
 
   run-benchmarks-on-gb10:
-    # needs: [build-on-gpu-host]
-    if: github.event_name == 'push' ||
-      github.event_name == 'pull_request'
+    needs: [build-on-gpu-host]
+    if: github.event_name == 'push'
     runs-on: ubuntu-latest
     permissions:
       contents: read
