renaming uccl.ep to uccl_ep

--- a/.github/workflows/uccl-build-test.yml
+++ b/.github/workflows/uccl-build-test.yml
@@ -170,8 +170,8 @@ jobs:
               exit 1
             fi
 
-            if ! python -c 'import torch; import uccl.ep'; then
-              echo 'Import of torch and uccl.ep failed. Cleaning up and exiting...'
+            if ! python -c 'import torch; import uccl_ep'; then
+              echo 'Import of torch and uccl_ep failed. Cleaning up and exiting...'
               python setup.py clean
               exit 1
             fi
