--- a/docker/Dockerfile.efa
+++ b/docker/Dockerfile.efa
@@ -56,15 +56,14 @@ RUN ls /opt/amazon/efa
 # Set path to EFA libraries
 ENV LD_LIBRARY_PATH=/opt/amazon/efa/lib64:$LD_LIBRARY_PATH
 
-# ─────────────────────────────────────────────────────────
-# Install Python build back-end (for Python ${PY_VER})
-# ─────────────────────────────────────────────────────────
-RUN python${PY_VER} -m pip install --no-cache-dir build auditwheel pybind11
-
 # ───── Install PyTorch with CUDA support ─────
 RUN python${PY_VER} -m pip install --no-cache-dir torch torchvision torchaudio \
     --index-url https://download.pytorch.org/whl/cu128
 
+# ─────────────────────────────────────────────────────────
+# Install Python build back-end (for Python ${PY_VER})
+# ─────────────────────────────────────────────────────────
+RUN python${PY_VER} -m pip install --no-cache-dir build auditwheel pybind11 nanobind
 RUN python${PY_VER} -m pip install --no-cache-dir --upgrade setuptools
 
 # ───── Set Python ${PY_VER} as default python3 and python3-config ─────
