--- a/docker/Dockerfile.rocm
+++ b/docker/Dockerfile.rocm
@@ -35,14 +35,14 @@ RUN apt-get update && \
 # ───── Clean up apt cache ─────
     rm -rf /var/lib/apt/lists/*
 
+# ───── Install PyTorch with ROCm support ─────
+RUN python${PY_VER} -m pip install --no-cache-dir --pre torch torchvision \
+--index-url https://download.pytorch.org/whl/nightly/rocm7.1
+
 # ─────────────────────────────────────────────────────────
 # Install Python build back-end (for Python ${PY_VER})
 # ─────────────────────────────────────────────────────────
-RUN python${PY_VER} -m pip install --no-cache-dir build auditwheel pybind11
-
-RUN python${PY_VER} -m pip install --no-cache-dir --pre torch torchvision \
-    --index-url https://download.pytorch.org/whl/nightly/rocm7.1
-
+RUN python${PY_VER} -m pip install --no-cache-dir build auditwheel pybind11 nanobind
 RUN python${PY_VER} -m pip install --no-cache-dir --upgrade setuptools
 
 
