--- a/p2p/Makefile.rocm
+++ b/p2p/Makefile.rocm
@@ -1,4 +1,4 @@
-# Makefile for UCCL P2P Engine pybind11 project
+# Makefile for UCCL P2P Engine nanobind project
 
 # EFA optional integration
 USE_EFA ?= $(shell echo $${USE_EFA:-0})
@@ -22,12 +22,19 @@ CXXFLAGS := -O3 -shared -std=c++17 -fPIC -I. -I./include -I../include -I$(HIP_IN
 	-Wl,-rpath=/usr/lib/x86_64-linux-gnu -Wl,-rpath=${CONDA_LIB_HOME} -I${CONDA_LIB_HOME}/../include \
 	$(CXXFLAGS_TRANS)
 
-# Python and pybind11 configuration
+# Python and nanobind configuration (stable ABI)
 PYTHON          ?= python3
 PYTHON_CONFIG    = $(PYTHON)-config
-PYEXT           := $(shell $(PYTHON_CONFIG) --extension-suffix)
-PYBIND11_INCLUDES := $(shell $(PYTHON) -m pybind11 --includes)
-PYTHON_LDFLAGS := $(shell $(PYTHON_CONFIG) --ldflags)
+PYEXT           := .abi3.so
+NB_DIR          := $(shell $(PYTHON) -c "import nanobind as _nb, os; print(os.path.dirname(_nb.__file__))")
+NB_INCLUDES     := -I$(NB_DIR)/include -I$(NB_DIR)/ext/robin_map/include -I$(shell $(PYTHON) -c "import sysconfig; print(sysconfig.get_path('include'))")
+NB_ABI_FLAGS    := -DPy_LIMITED_API=0x030C0000 -DNB_STABLE_ABI=1
+NB_SRC_DIR      := $(NB_DIR)/src
+NB_SRCS         := nb_internals.cpp nb_func.cpp nb_type.cpp nb_enum.cpp \
+                   nb_ndarray.cpp nb_static_property.cpp common.cpp error.cpp \
+                   trampoline.cpp implicit.cpp
+NB_OBJECTS      := $(addprefix nb_,$(NB_SRCS:.cpp=.o))
+PYTHON_LDFLAGS  := $(shell $(PYTHON_CONFIG) --ldflags)
 
 # Python installation path
 PYTHON_SITE_PACKAGES := $(shell $(PYTHON) -c "import site; print(site.getsitepackages()[0])")
@@ -69,8 +76,8 @@ CAPI_OBJECT := $(CAPI_SOURCE:.cc=.o)
 all: $(P2P_PYTHON_EXT) $(P2P_SHARED_LIB)
 
 # Build the shared library
-$(P2P_PYTHON_EXT): $(OBJECTS)
-	$(CXX) $(OBJECTS) \
+$(P2P_PYTHON_EXT): $(OBJECTS) $(NB_OBJECTS)
+	$(CXX) $(OBJECTS) $(NB_OBJECTS) \
 	      -L$(HIP_LIB) -lamdhip64 \
 	      -o $@ $(LDFLAGS) $(PYTHON_LDFLAGS) $(CXXFLAGS) \
 	      -Wl,-rpath,$(HIP_LIB)
@@ -81,14 +88,18 @@ $(P2P_SHARED_LIB): $(CAPI_OBJECT) $(CORE_OBJECT)
 	      -o $@ $(LDFLAGS) $(PYTHON_LDFLAGS) $(CXXFLAGS) \
 	      -Wl,-rpath,$(HIP_LIB) $(PYTHON_LIB)
 
+# Compile nanobind source files for stable ABI
+nb_%.o: $(NB_SRC_DIR)/%.cpp
+	$(CXX) -O3 -std=c++17 -fPIC -fvisibility=hidden $(NB_ABI_FLAGS) $(NB_INCLUDES) -c $< -o $@
+
 # Compile source files
 %.o: %.cc
-	$(CXX) $(CXXFLAGS) $(PYBIND11_INCLUDES) -c $< -o $@
+	$(CXX) $(CXXFLAGS) $(NB_INCLUDES) $(NB_ABI_FLAGS) -c $< -o $@
 
 # Compile NCCL-over-TCP source files
 nccl/%.o: nccl/%.cc
 	@mkdir -p nccl
-	$(CXX) $(CXXFLAGS) $(PYBIND11_INCLUDES) -I. -c $< -o $@
+	$(CXX) $(CXXFLAGS) $(NB_INCLUDES) $(NB_ABI_FLAGS) -I. -c $< -o $@
 
 # Install the module
 install: $(P2P_PYTHON_EXT) $(P2P_SHARED_LIB)
@@ -99,7 +110,7 @@ install: $(P2P_PYTHON_EXT) $(P2P_SHARED_LIB)
 	install -m 644 $(CAPI_HEADER) $(INCDIR)/
 # Clean build artifacts
 clean:
-	rm -f $(OBJECTS) $(CAPI_OBJECT) $(P2P_SHARED_LIB) $(P2P_PYTHON_EXT)
+	rm -f $(OBJECTS) $(CAPI_OBJECT) $(NB_OBJECTS) $(P2P_SHARED_LIB) $(P2P_PYTHON_EXT)
 	make clean -j$(nproc)
 	rm -f nccl/*.o
 
@@ -107,18 +118,18 @@ clean:
 test: $(P2P_PYTHON_EXT)
 	$(PYTHON) test_engine_write.py
 
-# Install pybind11 if not available
+# Install nanobind if not available
 install-deps:
-	pip3 install pybind11
+	pip3 install nanobind
 
 # Help target
 help:
 	@echo "Available targets:"
-	@echo "  all          - Build the pybind11 module"
+	@echo "  all          - Build the nanobind module (stable ABI)"
 	@echo "  install      - Install the module to Python site-packages"
 	@echo "  clean        - Remove build artifacts"
 	@echo "  test         - Run the test script"
-	@echo "  install-deps - Install pybind11 dependency"
+	@echo "  install-deps - Install nanobind dependency"
 	@echo "  help         - Show this help message"
 
 .PHONY: all clean test install-deps help install
