--- a/p2p/Makefile.therock
+++ b/p2p/Makefile.therock
@@ -1,4 +1,4 @@
-# Makefile for UCCL P2P Engine pybind11 project
+# Makefile for UCCL P2P Engine nanobind project (stable ABI)
 
 # Compiler and flags
 HIP_HOME?=/opt/rocm
@@ -11,12 +11,19 @@ CXXFLAGS := -O3 -shared -std=c++17 -fPIC -I../include -I$(RDMA_HOME) -I$(HIP_INC
 	-Wno-pointer-arith -Wno-sign-compare -Wno-unused-variable \
 	-I${CONDA_LIB_HOME}/../include -L${CONDA_LIB_HOME} -lglog -lgflags -lgtest -lz -lelf -libverbs -lpthread
 
-# Python and pybind11 configuration
+# Python and nanobind configuration (stable ABI)
 PYTHON          ?= python3
 PYTHON_CONFIG    = $(PYTHON)-config
-PYEXT           := $(shell $(PYTHON_CONFIG) --extension-suffix)
-PYBIND11_INCLUDES := $(shell $(PYTHON) -m pybind11 --includes)
-PYTHON_LDFLAGS := $(shell $(PYTHON_CONFIG) --ldflags)
+PYEXT           := .abi3.so
+NB_DIR          := $(shell $(PYTHON) -c "import nanobind as _nb, os; print(os.path.dirname(_nb.__file__))")
+NB_INCLUDES     := -I$(NB_DIR)/include -I$(NB_DIR)/ext/robin_map/include -I$(shell $(PYTHON) -c "import sysconfig; print(sysconfig.get_path('include'))")
+NB_ABI_FLAGS    := -DPy_LIMITED_API=0x030C0000 -DNB_STABLE_ABI=1
+NB_SRC_DIR      := $(NB_DIR)/src
+NB_SRCS         := nb_internals.cpp nb_func.cpp nb_type.cpp nb_enum.cpp \
+                   nb_ndarray.cpp nb_static_property.cpp common.cpp error.cpp \
+                   trampoline.cpp implicit.cpp
+NB_OBJECTS      := $(addprefix nb_,$(NB_SRCS:.cpp=.o))
+PYTHON_LDFLAGS  := $(shell $(PYTHON_CONFIG) --ldflags)
 
 # Python installation path
 PYTHON_SITE_PACKAGES := $(shell $(PYTHON) -c "import site; print(site.getsitepackages()[0])")
@@ -41,8 +48,8 @@ OBJECTS := $(SOURCES:.cc=.o)
 all: $(P2P_PYTHON_EXT) $(P2P_SHARED_LIB)
 
 # Build the shared library
-$(P2P_PYTHON_EXT): $(OBJECTS) $(RDMA_HOME)/librdma_hip.a
-	$(CXX) $(OBJECTS) $(RDMA_HOME)/librdma_hip.a \
+$(P2P_PYTHON_EXT): $(OBJECTS) $(NB_OBJECTS) $(RDMA_HOME)/librdma_hip.a
+	$(CXX) $(OBJECTS) $(NB_OBJECTS) $(RDMA_HOME)/librdma_hip.a \
 	      -L$(HIP_LIB) -lamdhip64 \
 	      -o $@ $(LDFLAGS) $(PYTHON_LDFLAGS) $(CXXFLAGS)
 
@@ -63,9 +70,13 @@ $(RDMA_PLUGIN_LIB): $(RDMA_OBJECTS)
 $(RDMA_OBJECTS): %.o: $(RDMA_HOME)/%.cc
 	$(CXX) -c $< -o $@ $(CXXFLAGS) -DDISABLE_CALL_ONCE_STATIC -I$(RDMA_HOME)
 
+# Compile nanobind source files for stable ABI
+nb_%.o: $(NB_SRC_DIR)/%.cpp
+	$(CXX) -O3 -std=c++17 -fPIC -fvisibility=hidden $(NB_ABI_FLAGS) $(NB_INCLUDES) -c $< -o $@
+
 # Compile source files
 %.o: %.cc
-	$(CXX) $(CXXFLAGS) $(PYBIND11_INCLUDES) -c $< -o $@
+	$(CXX) $(CXXFLAGS) $(NB_INCLUDES) $(NB_ABI_FLAGS) -c $< -o $@
 
 # Install the module
 install: $(P2P_PYTHON_EXT) $(P2P_SHARED_LIB)
@@ -75,25 +86,25 @@ install: $(P2P_PYTHON_EXT) $(P2P_SHARED_LIB)
 
 # Clean build artifacts
 clean:
-	rm -f $(OBJECTS) $(CAPI_OBJECT) $(P2P_SHARED_LIB) $(P2P_PYTHON_EXT) $(RDMA_PLUGIN_LIB) $(RDMA_OBJECTS)
+	rm -f $(OBJECTS) $(CAPI_OBJECT) $(NB_OBJECTS) $(P2P_SHARED_LIB) $(P2P_PYTHON_EXT) $(RDMA_PLUGIN_LIB) $(RDMA_OBJECTS)
 	make -C $(RDMA_HOME) -f Makefile.therock clean -j$(nproc) HIP_HOME=${HIP_HOME} CONDA_LIB_HOME=${CONDA_LIB_HOME}
 
 # Test the module
 test: $(P2P_PYTHON_EXT) $(P2P_SHARED_LIB)
 	$(PYTHON) test_engine_write.py
 
-# Install pybind11 if not available
+# Install nanobind if not available
 install-deps:
-	pip3 install pybind11
+	pip3 install nanobind
 
 # Help target
 help:
 	@echo "Available targets:"
-	@echo "  all          - Build the pybind11 module"
+	@echo "  all          - Build the nanobind module (stable ABI)"
 	@echo "  install      - Install the module to Python site-packages"
 	@echo "  clean        - Remove build artifacts"
 	@echo "  test         - Run the test script"
-	@echo "  install-deps - Install pybind11 dependency"
+	@echo "  install-deps - Install nanobind dependency"
 	@echo "  help         - Show this help message"
 
 .PHONY: all clean test install-deps help install
