format and nits

--- a/p2p/Makefile.rocm
+++ b/p2p/Makefile.rocm
@@ -101,13 +101,21 @@ nccl/%.o: nccl/%.cc
 	@mkdir -p nccl
 	$(CXX) $(CXXFLAGS) $(NB_INCLUDES) $(NB_ABI_FLAGS) -I. -c $< -o $@
 
+define safe_install
+	@echo "Installing $(1) to $(2)..."
+	@install -m $(3) $(1) $(2)/ || \
+		{ echo "Warning: Unable to install $(1) to $(2)/"; \
+		  echo "  Make sure $(2) exists and you have write permissions (try sudo make install)"; \
+		  exit 0; }
+endef
+
 # Install the module
 install: $(P2P_PYTHON_EXT) $(P2P_SHARED_LIB)
 	@mkdir -p $(INSTALL_DIR)
 	@cp $(P2P_PYTHON_EXT) $(INSTALL_DIR)/
 	@echo "Installation complete. Module installed as: $(INSTALL_DIR)/$(P2P_PYTHON_EXT)"
-	install -m 755 $(P2P_SHARED_LIB) $(LIBDIR)/
-	install -m 644 $(CAPI_HEADER) $(INCDIR)/
+	$(call safe_install,$(P2P_SHARED_LIB),$(LIBDIR),755)
+	$(call safe_install,$(CAPI_HEADER),$(INCDIR),644)
 # Clean build artifacts
 clean:
 	rm -f $(OBJECTS) $(CAPI_OBJECT) $(NB_OBJECTS) $(P2P_SHARED_LIB) $(P2P_PYTHON_EXT)
